<?xml version="1.0"?>
<package format="2">
  <name>grasp_multicam</name>
  <version>1.0.0</version>
  <description>package for grasp_multicam data set</description>

  <maintainer email="bernd.pfrommer@gmail.com">Bernd Pfrommer</maintainer>
  <license>Apache</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>nodelet</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>msckf_vio</depend>
  <depend>tagslam</depend>
  
  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml"/>
  </export>
</package>
